<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/welcomeMsg"
        android:textColor="@color/green50"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/txtName"
        android:textColor="@color/green50"
        android:textSize="34sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="19dp"
        android:width="320dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/newbie"
        android:textColor="@color/green50"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/already"
        android:layout_centerHorizontal="true"
        android:width="320dp"
        android:background="@drawable/light_rounded_corner"
        android:text="@string/btnSignIn"
        android:textColor="@color/green800"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnNew"
        android:layout_alignParentStart="true"
        android:layout_marginTop="6dp"
        android:width="150dp"
        android:text="@string/already_used_fit_choices"
        android:textAlignment="center"
        android:textColor="@color/green50"
        android:textColorHighlight="@color/green600"
        android:textStyle="bold" />
</RelativeLayout>